# watch-together

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
app/: range_response.py  web.py
static/: app.js  client.js  helpers.js  manager.js
templates/: base.html  client.html  index.html  manager.html  player.html  videos.html
