[tool.poetry]
name = "watch-together"
version = "0.1.0"
description = ""
authors = ["Ilya Siganov <ilya.blan4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
#pytest = "^7.1.2"
#mypy = "^0.961"
#isort = "^5.10.1"
#wemake-python-styleguide = "^0.16.1"
#autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
